--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         }
     },
     "require": {
-        "php": ">=7.3"
+        "php": ">=7.3",
+        "hyperf/utils": ">=2.1, <=3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
