--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         php-version: ['7.3', '7.4']
-        engine: ['none', 'swoole', 'swow']
+        engine: ['swoole', 'swow']
       max-parallel: 5
     steps:
       - name: Checkout
@@ -56,7 +56,10 @@ jobs:
           sudo sh -c "echo extension=swow > /etc/php/${{ matrix.php-version }}/cli/conf.d/swow.ini"
           php --ri swow
       - name: Setup Packages
-        run: composer update -o --no-scripts
+        run: composer update -o
+      - name: Setup Swow Engine
+        if: ${{ matrix.engine == 'swow' }}
+        run: composer require hyperf/engine-swow
       - name: Run Test Cases
         run: |
           composer analyse
