--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require": {
         "php": ">=7.3",
-        "hyperf/utils": ">=2.1, <=3.0"
+        "hyperf/engine": "^1.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
@@ -29,6 +29,9 @@
         "swoole/ide-helper": "dev-master",
         "swow/swow": "dev-develop",
         "symfony/var-dumper": "^5.1"
+    },
+    "suggest": {
+        "ext-json": "*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
