--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,22 +4,24 @@ on:
   push:
   pull_request:
   schedule:
-    - cron:  '0 10 * * *'
+    - cron: '0 2 * * *'
 
 env:
-  SWOOLE_VERSION: '4.6.7'
+  SW_VERSION: 'v4.8.1'
   SWOW_VERSION: 'develop'
 
 jobs:
   ci:
-    name: Test PHP ${{ matrix.php-version }} on ${{ matrix.engine }}
-    runs-on: "${{ matrix.os }}"
+    name: Test for Swoole
+    runs-on: 'ubuntu-latest'
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        php-version: ['7.3', '7.4']
-        engine: ['swoole', 'swow']
+        php-version: [ '8.0' ]
+        swoole-version: [ 'v4.5.11', 'v4.6.7', 'v4.7.1', 'v4.8.1', 'master' ]
       max-parallel: 5
+    env:
+      SW_VERSION: ${{ matrix.swoole-version }}
+      PHP_VERSION: ${{ matrix.php-version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -32,40 +34,9 @@ jobs:
           coverage: none
       - name: Setup Swoole
         if: ${{ matrix.engine == 'swoole' }}
-        run: |
-          sudo apt-get update
-          sudo apt-get install libcurl4-openssl-dev
-          wget https://github.com/swoole/swoole-src/archive/v${SWOOLE_VERSION}.tar.gz -O swoole.tar.gz
-          mkdir -p swoole
-          tar -xf swoole.tar.gz -C swoole --strip-components=1
-          rm swoole.tar.gz
-          cd swoole
-          phpize
-          ./configure --enable-openssl --enable-http2 --enable-swoole-curl --enable-swoole-json
-          make -j$(nproc)
-          sudo make install
-          sudo sh -c "echo extension=swoole > /etc/php/${{ matrix.php-version }}/cli/conf.d/swoole.ini"
-          php --ri swoole
-      - name: Setup Swow
-        if: ${{ matrix.engine == 'swow' }}
-        run: |
-          wget https://github.com/swow/swow/archive/"${SWOW_VERSION}".tar.gz -O swow.tar.gz
-          mkdir -p swow
-          tar -xf swow.tar.gz -C swow --strip-components=1
-          rm swow.tar.gz
-          cd swow/ext || exit
-
-          phpize
-          ./configure --enable-debug
-          make -j "$(nproc)"
-          sudo make install
-          sudo sh -c "echo extension=swow > /etc/php/${{ matrix.php-version }}/cli/conf.d/swow.ini"
-          php --ri swow
+        run: ./.github/swoole.install.sh
       - name: Setup Packages
         run: composer update -o
-      - name: Setup Swow Engine
-        if: ${{ matrix.engine == 'swow' }}
-        run: composer require hyperf/engine-swow
       - name: Run Test Cases
         run: |
           composer analyse
