--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         }
     },
     "require": {
-        "php": ">=7.3",
+        "php": ">=8.0",
         "hyperf/engine": "^1.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
         "mockery/mockery": "^1.0",
-        "phpstan/phpstan": "^0.12",
-        "phpunit/phpunit": ">=7.0",
+        "phpstan/phpstan": "^1.0",
+        "phpunit/phpunit": "^9.5",
         "swoole/ide-helper": "dev-master",
         "swow/swow": "dev-develop",
         "symfony/var-dumper": "^5.1"
@@ -46,7 +46,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-main": "0.2-dev"
+            "dev-main": "1.0-dev"
         }
     }
 }
