--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "license": "MIT",
     "keywords": [
         "php",
-        "hyperf"
+        "hyperf",
+        "rpc",
+        "multiplex"
     ],
     "description": "",
     "autoload": {
@@ -23,6 +25,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
+        "hyperf/utils": ">=2.2",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^1.0",
         "phpunit/phpunit": "^9.5",
