--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,8 +16,17 @@ jobs:
     runs-on: 'ubuntu-latest'
     strategy:
       matrix:
-        php-version: [ '8.0' ]
-        swoole-version: [ 'v4.5.11', 'v4.6.7', 'v4.7.1', 'v4.8.1', 'master' ]
+        php-version: [ '8.0', '8.1' ]
+        swoole-version: [ 'v4.5.11', 'v4.6.7', 'v4.7.1', 'v4.8.3', 'master' ]
+        exclude:
+          - php-version: '8.1'
+            swoole-version: 'v4.5.11'
+          - php-version: '8.1'
+            swoole-version: 'v4.6.7'
+          - php-version: '8.1'
+            swoole-version: 'v4.7.1'
+          - php-version: '8.1'
+            swoole-version: 'v4.8.3'
       max-parallel: 5
     env:
       SW_VERSION: ${{ matrix.swoole-version }}
