--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,8 @@ jobs:
     strategy:
       matrix:
         php-version: [ '8.0', '8.1' ]
-        swow-version: [ 'v0.1.0-nightly20220116', 'develop' ]
+        swow-version: [ 'v1.0.0', 'develop' ]
+      fail-fast: false
       max-parallel: 4
     env:
       SW_VERSION: ${{ matrix.swow-version }}
