--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,7 +54,7 @@ jobs:
       fail-fast: false
       max-parallel: 8
     env:
-      SW_VERSION: ${{ matrix.swow-version }}
+      SW_VERSION: ${{ matrix.sw-version }}
       PHP_VERSION: ${{ matrix.php-version }}
     steps:
       - name: Checkout
